--- a/res/main_window.glade
+++ b/res/main_window.glade
@@ -8,6 +8,12 @@
       <column type="gchararray"/>
     </columns>
   </object>
+  <object class="GtkFileFilter" id="image_file_filter">
+    <mime-types>
+      <mime-type>image/png</mime-type>
+      <mime-type>image/jpg</mime-type>
+    </mime-types>
+  </object>
   <object class="GtkApplicationWindow" id="window_main">
     <property name="width_request">600</property>
     <property name="height_request">250</property>
@@ -223,7 +229,10 @@
           <object class="GtkFileChooserButton">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="create_folders">False</property>
+            <property name="filter">image_file_filter</property>
             <property name="title" translatable="yes"/>
+            <signal name="file-set" handler="on_file_chosen" swapped="no"/>
           </object>
         </child>
       </object>
