--- a/res/main_window.glade
+++ b/res/main_window.glade
@@ -15,8 +15,8 @@
     </mime-types>
   </object>
   <object class="GtkApplicationWindow" id="window_main">
-    <property name="width_request">600</property>
-    <property name="height_request">250</property>
+    <property name="width_request">700</property>
+    <property name="height_request">350</property>
     <property name="can_focus">False</property>
     <signal name="delete-event" handler="on_delete_window" swapped="no"/>
     <child>
@@ -241,6 +241,7 @@
           <object class="GtkButton" id="btn_scale">
             <property name="label" translatable="yes">Scale</property>
             <property name="visible">True</property>
+            <property name="sensitive">False</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
             <signal name="clicked" handler="on_scale_selected_file" swapped="no"/>
