--- a/res/main_window.glade
+++ b/res/main_window.glade
@@ -15,8 +15,8 @@
     </mime-types>
   </object>
   <object class="GtkApplicationWindow" id="window_main">
-    <property name="width_request">700</property>
-    <property name="height_request">350</property>
+    <property name="width_request">750</property>
+    <property name="height_request">550</property>
     <property name="can_focus">False</property>
     <signal name="delete-event" handler="on_delete_window" swapped="no"/>
     <child>
@@ -203,14 +203,62 @@
           </packing>
         </child>
         <child>
-          <object class="GtkImage" id="imgv_preview">
-            <property name="width_request">-1</property>
-            <property name="height_request">-1</property>
+          <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="halign">center</property>
-            <property name="valign">center</property>
-            <property name="pixbuf">img/ic_image.png</property>
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkImage" id="imgv_preview">
+                <property name="width_request">-1</property>
+                <property name="height_request">-1</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="halign">center</property>
+                <property name="valign">center</property>
+                <property name="pixbuf">img/ic_image.png</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="label_filename">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="margin_left">6</property>
+                <property name="margin_right">6</property>
+                <property name="margin_top">6</property>
+                <property name="margin_bottom">6</property>
+                <attributes>
+                  <attribute name="font-desc" value="&lt;Tutaj należy wprowadzić wartość&gt; 16"/>
+                  <attribute name="weight" value="medium"/>
+                  <attribute name="scale" value="1"/>
+                  <attribute name="foreground" value="#ffffffffffff"/>
+                </attributes>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="label_image_info">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="margin_left">6</property>
+                <property name="margin_right">6</property>
+                <property name="margin_top">6</property>
+                <property name="margin_bottom">24</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="expand">True</property>
