--- a/res/main_window.glade
+++ b/res/main_window.glade
@@ -203,10 +203,11 @@
           </packing>
         </child>
         <child>
-          <object class="GtkBox">
+          <object class="GtkBox" id="box_image_container">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
+            <signal name="drag-data-received" handler="on_drag_data_received" swapped="no"/>
             <child>
               <object class="GtkImage" id="imgv_preview">
                 <property name="width_request">-1</property>
