--- a/res/main_window.glade
+++ b/res/main_window.glade
@@ -333,37 +333,51 @@
       </object>
     </child>
     <child type="titlebar">
-      <object class="GtkHeaderBar">
+        <object class="GtkHeaderBar">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="title">PyImageResizer</property>
+    <property name="subtitle">Image resizer for Android</property>
+    <property name="show_close_button">True</property>
+    <child>
+      <object class="GtkFileChooserButton">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="title">PyImageResizer</property>
-        <property name="subtitle">Image resizer for Android</property>
-        <property name="show_close_button">True</property>
-        <child>
-          <object class="GtkFileChooserButton">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="create_folders">False</property>
-            <property name="filter">image_file_filter</property>
-            <property name="title" translatable="yes"/>
-            <signal name="file-set" handler="on_file_chosen" swapped="no"/>
-          </object>
-        </child>
-        <child>
-          <object class="GtkButton" id="btn_scale">
-            <property name="label" translatable="yes">Scale</property>
-            <property name="visible">True</property>
-            <property name="sensitive">False</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <signal name="clicked" handler="on_scale_selected_file" swapped="no"/>
-          </object>
-          <packing>
-            <property name="pack_type">end</property>
-            <property name="position">2</property>
-          </packing>
-        </child>
+        <property name="create_folders">False</property>
+        <property name="filter">image_file_filter</property>
+        <property name="title" translatable="yes"/>
+        <signal name="file-set" handler="on_file_chosen" swapped="no"/>
       </object>
+    </child>
+    <child>
+      <object class="GtkButton" id="btn_scale">
+        <property name="label" translatable="yes">Scale</property>
+        <property name="visible">True</property>
+        <property name="sensitive">False</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">True</property>
+        <signal name="clicked" handler="on_scale_selected_file" swapped="no"/>
+      </object>
+      <packing>
+        <property name="pack_type">end</property>
+        <property name="position">2</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkButton" id="btn_clear">
+        <property name="label" translatable="yes">Clear</property>
+        <property name="visible">True</property>
+        <property name="sensitive">False</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">True</property>
+        <signal name="clicked" handler="on_clear" swapped="no"/>
+      </object>
+      <packing>
+        <property name="pack_type">end</property>
+        <property name="position">2</property>
+      </packing>
+    </child>
+  </object>
     </child>
   </object>
   <object class="GtkMessageDialog" id="dialog_image_error">
